@@ -1,3 +1,8 @@
+2003-12-10  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/edit_person.glade: Add notes format radiobuttons.
+	* src/EditPerson.py: Support format for the person's notes.
+	* src/RelLib.py: More support for the notes' format.
+
 2003-12-10  Tim Waugh  <twaugh@redhat.com>
 	* doc/omf.make: Fixed DESTDIR support.
 
